--- a/src/Client/wwwroot/index.html
+++ b/src/Client/wwwroot/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>The Archives</title>
+    <title>TheArchives</title>
     <base href="/" />
-    <link href="lib/normalize/normalize.min.css" rel="stylesheet" />
-    <link href="lib/line-awesome/line-awesome/css/line-awesome.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="TheArchives.Client.styles.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
+    <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
 </head>
 
 <body>
@@ -25,7 +24,6 @@
     <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
-    <script src="js/reader.interop.js"></script>
 </body>
 
 </html>
